Unable to complete the tests for intent and sharedPrefs. Code is started but not completed. Will continue to work on it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="title_activity_search_results">SearchResults</string>
     <string name="default_name">Zak Brinlee</string>
+    <string name="default_text">Default text</string>
+    <string name="default_backup">Default something</string>
 </resources>
