HW7 - Location showing, test device not working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="default_name">Zak Brinlee</string>
     <string name="default_text">Default text</string>
     <string name="default_backup">Default something</string>
+    <string name="title_activity_location">Map</string>
 </resources>
